minor fix css extra space

--- a/src/features/ProfilePage/styles/ProfilePage.sass
+++ b/src/features/ProfilePage/styles/ProfilePage.sass
@@ -34,12 +34,12 @@
         min-height: 799px
 
 .header_profile
-    position: sticky
+    position: absolute
     top: 0
     z-index: 100
     display: flex
     justify-content: space-between
-    width: 100vw
+    width: 100%
     height: 79px
     background: $mainBlue
     @media (max-width: 320px)
@@ -112,7 +112,7 @@
     display: flex
     justify-content: center
     position: absolute
-    width: 100vw
+    width: 100%
     top: 277px
     @media (max-width: 768px)
         top: 237px
@@ -173,7 +173,7 @@
     position: absolute
     color: $mainWhite
     bottom: 0
-    width: 100vw
+    width: 100%
     height: 57px
     background-color: $mainBlue
 
